# neo4j-generative-ai-google-cloud

./: .gitignore  delete_gcp_project.ps1  pyproject.toml  setup_gcp_project.ps1
AI Documents/: GEMINI_25_UPGRADE.md  gemini_pro_2.5.md  neo4j_genai_prd.md
GREEN_PROJECT/: README.md  requirements.txt  verify_bootstrap.py
GREEN_PROJECT/src/: __init__.py
GREEN_PROJECT/src/document_pipeline/: __init__.py  docai_processor.py  text_chunker.py
GREEN_PROJECT/src/utils/: __init__.py  config.py  neo4j_utils.py  storage.py  vertex_ai.py
GREEN_PROJECT/tests/: __init__.py
GREEN_PROJECT/tests/document_pipeline/: __init__.py  test_docai_processor.py
GREEN_PROJECT/tests/utils/: __init__.py  test_neo4j_utils.py  test_storage.py  test_vertex_ai.py
assetmanager/: CONTRIBUTING.md  DEPLOYMENT_GUIDE.md  README.md  debug_env.py  deploy_to_cloud_run.py  deploy_to_compute_engine.py  install_dependencies.ps1  minimal_bootstrap.ps1  pytest.ini  requirements.txt  run_tests.py  simple_test.ps1  test_bootstrap.ps1  test_bootstrap_clean.ps1  test_bootstrap_new.ps1  test_neo4j_connection.py  test_neo4j_only.py  test_vertex_ai.py  upgrade_to_gemini_25.ps1  verify_bootstrap.py  verify_setup.py
assetmanager/examples/: gemini_25_demo.py
assetmanager/src/: main.py
assetmanager/src/GREEN_PROJECT/: .env.example
assetmanager/tests/: test_config.py  test_genai_utils.py  test_neo4j_utils.py  test_vertex_ai.py
project_documentation/: DOCUMENT_PROCESSING_ARCHITECTURE.md  Neo4j Knowledge Graphs and Google Generative AI.pptx  build_plan_checklist.md  build_tracking.md  existing_setup.md
(+18 files in other folders)
